# stroma

./: __azurite_db_queue__.json  __azurite_db_queue_extent__.json  pyproject.toml
.github/workflows/: sqlmesh-deploy.yml
sqlmeshrunner/: sqlmesh_runner.py
stroma/: config.py  sqlmesh_runner.py
stroma/audits/: audit__future_event.sql
stroma/models/achilles/: achilles_analysis_details.sql  achilles_results.sql  achilles_results_dist.sql
stroma/models/aereus/: bronze__care_site.sql  bronze__cost.sql  bronze__death.sql  bronze__drug_strength.sql  bronze__person.sql  bronze__visit_occurrence.sql  bronze_blueprint__death.sql  bronze_blueprint__person.sql  bronze_blueprint__visit_occurrence.sql
stroma/models/argentum/: silver__care_site.sql  silver__cdm_source.sql  silver__condition_occurrence.sql  silver__cost.sql  silver__death.sql  silver__device_exposure.sql  silver__drug_exposure.sql  silver__drug_strength.sql  silver__episode.sql  silver__episode_event.sql  silver__fact_relationship.sql  silver__location.sql  silver__measurement.sql  silver__note.sql  silver__note_nlp.sql  silver__observation.sql  silver__payer_plan_period.sql  silver__person.sql  silver__procedure_occurrence.sql  silver__provider.sql  silver__specimen.sql  silver__visit_detail.sql  silver__visit_occurrence.sql
stroma/models/aurum/: gold__care_site.sql  gold__cdm_source.sql  gold__condition_occurrence.sql  gold__cost.sql  gold__death.sql  gold__device_exposure.sql  gold__drug_exposure.sql  gold__drug_strength.sql  gold__episode.sql  gold__episode_event.sql  gold__fact_relationship.sql  (+12 more)
(+297 files in other folders)
