[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stroma"
description = "Scalable Transpiling Reproducible OMOP Medallion Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "vvcb" }]
dependencies = ["python-dotenv", "sqlmesh[github,azuresql,databricks]~=0.227"]
dynamic = ["version"]

[tool.setuptools]
packages = ["stroma"]

[tool.setuptools.dynamic]
version = { attr = "stroma.__version__" }

[project.urls]
Homepage = "https://github.com/lsc-sde/stroma"
# Documentation = "https://lsc-sde.github.io/stroma/"

[project.optional-dependencies]
mssql = ["sqlmesh[mssql]~=0.203"]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.10",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.19.0",
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
]
